new tabs section created

--- a/index.html
+++ b/index.html
@@ -10,38 +10,96 @@
   </head>
   <body>
     <main>
-      <header class="nav-header">
-        <nav class="navbar">
-          <div class="wrapper">
-            <a href="" class="logo">
-              <img src="/assets/logo.svg" alt="Findtrend logo" />
-              <h4>Findtrend</h4>
-            </a>
+      <section class="hero">
+        <header class="nav-header">
+          <nav class="navbar">
+            <div class="wrapper">
+              <a href="" class="logo">
+                <img src="/assets/logo.svg" alt="Findtrend logo" />
+                <h4>Findtrend</h4>
+              </a>
+            </div>
+            <ul>
+              <li>
+                <div><a href="">About</a></div>
+              </li>
+              <li>
+                <div><a href="">How it works</a></div>
+              </li>
+              <li>
+                <div><a href="">Pricing</a></div>
+              </li>
+              <li>
+                <div><a href="">Solution</a></div>
+              </li>
+              <li>
+                <div><a href="">Features</a></div>
+              </li>
+            </ul>
+            <div class="btns">
+              <button>Login</button>
+              <button>Register</button>
+            </div>
+          </nav>
+        </header>
+        <!-- <img src="/assets/ornament.svg" alt="bg lines" class="lines" /> -->
+        <div class="hero-content">
+          <h1>Minimize your tabs. Find the trends!</h1>
+          <p>
+            Don&apos;t let your computer memories consumes all of those browser
+            tabs. Findtrend let you gathers all of your favorite website into
+            one place.
+          </p>
+          <div class="hero-content-get_started">
+            <button>Get Started 🔥</button>
+            <div>
+              <span>All research start from here</span>
+              <img src="/assets/arrow-down.svg" alt="arrow down icon" />
+            </div>
           </div>
-          <ul>
-            <li>
-              <div><a href="">About</a></div>
-            </li>
-            <li>
-              <div><a href="">How it works</a></div>
-            </li>
-            <li>
-              <div><a href="">Pricing</a></div>
-            </li>
-            <li>
-              <div><a href="">Solution</a></div>
-            </li>
-            <li>
-              <div><a href="">Features</a></div>
-            </li>
-          </ul>
-          <div class="btns">
-            <button>Login</button>
-            <button>Register</button>
+        </div>
+      </section>
+
+      <section class="new-tabs">
+        <h1>Open new tabs is sh*t</h1>
+        <div class="new-tabs-center">
+          <div class="new-tabs-center-info">
+            <img src="/assets/arrow-right.svg" alt="arrow right icon" />
+            <span>solution for discover a trend</span>
           </div>
-        </nav>
-      </header>
-      <section class="hero"></section>
+          <div class="new-tabs-center-box">
+            <img src="/assets/images/findtrend.png" alt="findtrend image" />
+            <img
+              class="disposed-img"
+              src="/assets/images/twitter.png"
+              alt="twitter image"
+            />
+            <img
+              class="disposed-img"
+              src="/assets/images/pinterest.png"
+              alt="pinterest image"
+            />
+            <img
+              class="disposed-img"
+              src="/assets/images/facebook.png"
+              alt="facebook image"
+            />
+            <img
+              class="disposed-img"
+              src="/assets/images/dribble.png"
+              alt="dribble image"
+            />
+          </div>
+          <div class="new-tabs-center-info right">
+            <img src="/assets/arrow-left.svg" alt="arrow left icon" />
+            <span>You just need one tab now</span>
+          </div>
+        </div>
+        <p>
+          A solution for your browser tabs and don’t make your device get slower
+          over time. Get ease and faster to discover a trend with just one tab.
+        </p>
+      </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="/app.js"></script>
