--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             </ul>
             <div class="btns">
               <button>Login</button>
-              <button>Register</button>
+              <button>
+                <span>Register</span>
+                <div></div>
+              </button>
             </div>
           </nav>
         </header>
@@ -96,9 +99,95 @@
           </div>
         </div>
         <p>
-          A solution for your browser tabs and don’t make your device get slower
-          over time. Get ease and faster to discover a trend with just one tab.
+          A solution for your browser tabs and don&apos;t make your device get
+          slower over time. Get ease and faster to discover a trend with just
+          one tab.
         </p>
+      </section>
+      <section class="increase">
+        <p>
+          Findtrend helps you to increase your productivity and reduce your
+          computer's memory load,
+          <span
+            >an application that can fulfill your daily browsing needs.</span
+          >
+        </p>
+      </section>
+      <section class="startups">
+        <h2>Findtrend make +1000 Startup grow</h2>
+        <div class="startups-list"></div>
+      </section>
+      <section class="platforms">
+        <h2>All platform connect to Findtrend</h2>
+        <div class="platforms-icons"></div>
+      </section>
+      <section class="tweets">
+        <div class="tweets-shots">
+          <img src="/assets/images/tweet_1.png" alt="tweet screenshot" />
+          <img src="/assets/images/tweet_2.png" alt="tweet screenshot" />
+          <img src="/assets/images/tweet_3.png" alt="tweet screenshot" />
+        </div>
+        <button>
+          <span>View More Trend</span>
+          <div></div>
+        </button>
+      </section>
+      <section class="deals">
+        <h2>Get your best deal</h2>
+        <div class="deals-cards">
+          <div class="deals-card personal">
+            <div class="deals-card-top">
+              <h3>Personal</h3>
+              <p>Special first packet for all</p>
+            </div>
+            <div class="deals-card-cost">
+              <h2>$8</h2>
+              <h4>/Month</h4>
+            </div>
+            <ul></ul>
+            <button>
+              <span>Start Free Trial</span>
+              <div></div>
+            </button>
+          </div>
+          <div class="deals-card regular">
+            <div class="deals-card-top">
+              <h3>Regular</h3>
+              <p>Recommended for personal pro</p>
+            </div>
+            <div class="deals-card-cost">
+              <h2>$20</h2>
+              <h4>/Month</h4>
+            </div>
+            <ul></ul>
+            <button>
+              <span>Start Free Trial</span>
+              <div></div>
+            </button>
+          </div>
+          <div class="deals-card premium">
+            <div class="deals-card-top">
+              <h3>Premium</h3>
+              <p>Packet for Startup & Company</p>
+            </div>
+            <div class="deals-card-cost">
+              <h2>$48</h2>
+              <h4>/Month</h4>
+            </div>
+            <ul></ul>
+            <button>
+              <span>Start Free Trial</span>
+              <div></div>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="join">
+        <h1>Join us on email for <span>more trending topics</span></h1>
+        <button>
+          <span>Join Now </span>
+          <div></div>
+        </button>
       </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
