--- a/index.html
+++ b/index.html
@@ -189,6 +189,26 @@
           <div></div>
         </button>
       </section>
+      <footer class="footer">
+        <div class="logo">
+          <img src="/assets/logo-black.svg" alt="findtrend logo" />
+          <h4>Findtrend</h4>
+        </div>
+        <ul>
+          <li>
+            <div><a href="">Privacy Policy</a></div>
+          </li>
+          <li>
+            <div><a href="">Terms and Conditions</a></div>
+          </li>
+          <li>
+            <div><a href="">Contact Us</a></div>
+          </li>
+          <li>
+            <div><a href="">Careers</a></div>
+          </li>
+        </ul>
+      </footer>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="/app.js"></script>
