--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/splitting/dist/splitting.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/splitting/dist/splitting-cells.css"
+    />
     <title>Findtrend</title>
   </head>
   <body>
@@ -47,8 +56,8 @@
         </header>
         <!-- <img src="/assets/ornament.svg" alt="bg lines" class="lines" /> -->
         <div class="hero-content">
-          <h1>Minimize your tabs. Find the trends!</h1>
-          <p>
+          <h1 class="title">Minimize your tabs. Find the trends!</h1>
+          <p class="title">
             Don&apos;t let your computer memories consumes all of those browser
             tabs. Findtrend let you gathers all of your favorite website into
             one place.
@@ -68,7 +77,7 @@
         <div class="new-tabs-center">
           <div class="new-tabs-center-info">
             <img src="/assets/arrow-right.svg" alt="arrow right icon" />
-            <span>solution for discover a trend</span>
+            <span data-splitting="chars">solution for discover a trend</span>
           </div>
           <div class="new-tabs-center-box">
             <img src="/assets/images/findtrend.png" alt="findtrend image" />
@@ -95,7 +104,7 @@
           </div>
           <div class="new-tabs-center-info right">
             <img src="/assets/arrow-left.svg" alt="arrow left icon" />
-            <span>You just need one tab now</span>
+            <span data-splitting="chars">You just need one tab now</span>
           </div>
         </div>
         <p>
@@ -127,18 +136,21 @@
           <img src="/assets/images/tweet_2.png" alt="tweet screenshot" />
           <img src="/assets/images/tweet_3.png" alt="tweet screenshot" />
         </div>
-        <button>
-          <span>View More Trend</span>
-          <div></div>
-        </button>
+        <div class="wrapper">
+          <button>
+            <span>View More Trends</span>
+            <div></div>
+          </button>
+        </div>
       </section>
       <section class="deals">
         <h2>Get your best deal</h2>
+        <div class="deals-intervals"></div>
         <div class="deals-cards">
           <div class="deals-card personal">
             <div class="deals-card-top">
-              <h3>Personal</h3>
-              <p>Special first packet for all</p>
+              <h3 data-splitting="chars">Personal</h3>
+              <p data-splitting="chars">Special first packet for all</p>
             </div>
             <div class="deals-card-cost">
               <h2>$8</h2>
@@ -152,8 +164,8 @@
           </div>
           <div class="deals-card regular">
             <div class="deals-card-top">
-              <h3>Regular</h3>
-              <p>Recommended for personal pro</p>
+              <h3 data-splitting="chars">Regular</h3>
+              <p data-splitting="chars">Recommended for personal pro</p>
             </div>
             <div class="deals-card-cost">
               <h2>$20</h2>
@@ -167,8 +179,8 @@
           </div>
           <div class="deals-card premium">
             <div class="deals-card-top">
-              <h3>Premium</h3>
-              <p>Packet for Startup & Company</p>
+              <h3 data-splitting="chars">Premium</h3>
+              <p data-splitting="chars">Packet for Startup & Company</p>
             </div>
             <div class="deals-card-cost">
               <h2>$48</h2>
@@ -210,6 +222,10 @@
         </ul>
       </footer>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+    <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="/app.js"></script>
   </body>
